--- a/app/src/main/res/layout/content_store_add_item.xml
+++ b/app/src/main/res/layout/content_store_add_item.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_store_add_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,7 +15,138 @@
     tools:showIn="@layout/activity_store_add_item">
 
 
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/productid_hint"
+            android:inputType="text"
+            android:id="@+id/storeAddItem_productId_edittext"
+            android:maxLines="1"
+
+            android:editable="false"
+            android:onClick="openQRScanner"
 
 
+            />
+    </android.support.design.widget.TextInputLayout>
 
-</RelativeLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/productname_hint"
+            android:inputType="text"
+            android:id="@+id/storeAddItem_productname_edittext"
+            android:maxLines="1"
+
+            />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/productprice_hint"
+            android:inputType="number"
+            android:id="@+id/storeAddItem_productprice_edittext"
+            android:maxLines="1"
+
+            />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/productweight_hint"
+            android:inputType="number"
+            android:id="@+id/storeAddItem_productweight_edittext"
+            android:maxLines="1"
+
+            />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/productquantity_hint"
+            android:inputType="number"
+            android:id="@+id/storeAddItem_productquantity_edittext"
+            android:maxLines="1"
+
+            />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/productexpiry_hint"
+            android:inputType="date"
+            android:id="@+id/storeAddItem_productexpiry_edittext"
+            android:maxLines="1"
+
+            />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/productbrand_hint"
+            android:inputType="text"
+            android:id="@+id/storeAddItem_productbrand_edittext"
+            android:maxLines="1"
+
+            />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/productcategory_hint"
+            android:inputType="text"
+            android:id="@+id/storeAddItem_productcategory_edittext"
+            android:maxLines="1"
+
+            />
+    </android.support.design.widget.TextInputLayout>
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/storeaddItem_addButton_hint"
+        android:onClick="addItemToStoreListing"
+        />
+
+
+</LinearLayout>
