Offer insertin and showing done

--- a/app/src/main/res/layout/content_store_add_offer.xml
+++ b/app/src/main/res/layout/content_store_add_offer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_store_add_offer"
@@ -9,8 +9,41 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="app.smarttrolley.appforyou.smarttrolley.StoreAddOffer"
     tools:showIn="@layout/activity_store_add_offer">
 
-</RelativeLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/offerHeading_hint"
+            android:inputType="text"
+            android:id="@+id/storeAddoffer_offerHeading_edittext"
+            android:maxLines="3"
+
+            />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/offerHeading_hint"
+            android:inputType="text"
+            android:id="@+id/storeAddoffer_offersection_edittext"
+            android:maxLines="3"
+
+            />
+    </android.support.design.widget.TextInputLayout>
+
+
+</LinearLayout>
