--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,12 +23,56 @@
 
     <include layout="@layout/content_main" />
 
+
+    <!--bottom shjeet layout-->
+    <LinearLayout
+        android:id="@+id/design_bottom_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:background="@color/colorAccent"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="50dp"
+        app:elevation="8dp"
+
+        app:layout_behavior="@string/bottom_sheet_behavior">
+
+        <TextView
+            android:id="@+id/bottomsheet_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Suggestions"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
+
+
+        <ListView
+            android:layout_width="match_parent"
+            android:id="@+id/main_bottomSheet_suggestion_listView"
+            android:nestedScrollingEnabled="true"
+            android:layout_height="match_parent">
+
+        </ListView>
+
+
+
+
+    </LinearLayout>
+
+
+    <!--Fab button for add-->
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_add_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:layout_anchor="@+id/design_bottom_sheet"
+        app:layout_anchorGravity="top|end"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
 
 </android.support.design.widget.CoordinatorLayout>
