--- a/app/src/main/res/layout/content_store_add_item.xml
+++ b/app/src/main/res/layout/content_store_add_item.xml
@@ -6,15 +6,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="16dp"
+    android:layout_marginTop="15dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="app.smarttrolley.appforyou.smarttrolley.StoreAddItem"
     tools:showIn="@layout/activity_store_add_item">
 
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add More Items"
+        android:textColor="@color/red"
+        android:textAlignment="center"
+        android:textStyle="bold|italic"
+        android:textSize="25sp"
+        android:layout_marginBottom="6dp"
+        />
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -69,46 +77,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/productweight_hint"
             android:inputType="number"
+
             android:id="@+id/storeAddItem_productweight_edittext"
             android:maxLines="1"
 
             />
+
+
+
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/productquantity_hint"
-            android:inputType="number"
-            android:id="@+id/storeAddItem_productquantity_edittext"
-            android:maxLines="1"
-
-            />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/productexpiry_hint"
-            android:inputType="date"
-            android:id="@+id/storeAddItem_productexpiry_edittext"
-            android:maxLines="1"
-
-            />
-    </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -140,11 +125,19 @@
             />
     </android.support.design.widget.TextInputLayout>
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+    </android.support.v7.widget.CardView>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/storeaddItem_addButton_hint"
+        android:textColor="@color/white"
+        android:background="@color/red"
         android:onClick="addItemToStoreListing"
         />
 
