--- a/app/src/main/res/layout/content_store_add_offer.xml
+++ b/app/src/main/res/layout/content_store_add_offer.xml
@@ -5,20 +5,50 @@
     android:id="@+id/content_store_add_offer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="100dp"
     android:orientation="vertical"
+    android:background="@color/white"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="app.smarttrolley.appforyou.smarttrolley.StoreAddOffer"
-    tools:showIn="@layout/activity_store_add_offer">
+    tools:showIn="@layout/activity_store_add_offer"
+    android:weightSum="1">
 
+
+
+
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="ADD OFFERS!"
+    android:textAlignment="center"
+    android:textColor="@color/red"
+    android:textStyle="italic|bold"
+    android:typeface="sans"
+    android:textSize="30sp"
+    />
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+          >
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/offerSection_hint"
+            android:inputType="text"
+            android:textColor="@color/red"
+            android:id="@+id/storeAddoffer_offersection_edittext"
+            android:maxLines="3"
+            android:layout_marginTop="100dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+        </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:id="@+id/textInputLayout">
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,23 +57,33 @@
             android:id="@+id/storeAddoffer_offerHeading_edittext"
             android:maxLines="3"
 
-            />
+            android:textColor="@color/red"
+            android:layout_below="@+id/storeAddoffer_offersection_edittext"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+    </android.support.v7.widget.CardView>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/offerHeading_hint"
-            android:inputType="text"
-            android:id="@+id/storeAddoffer_offersection_edittext"
-            android:maxLines="3"
 
-            />
-    </android.support.design.widget.TextInputLayout>
+    <Button
+        android:text="Add Offer"
+        android:layout_width="match_parent"
+        android:background="@color/red"
+        android:textColor="@color/white"
+        android:layout_height="wrap_content"
+        android:id="@+id/store_add_offer_btn"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
+
 
 
 </LinearLayout>
