--- a/app/src/main/res/layout/activity_ebill_payment.xml
+++ b/app/src/main/res/layout/activity_ebill_payment.xml
@@ -29,9 +29,10 @@
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="336dp"
+            android:layout_height="0dp"
+
             android:id="@+id/ebill_listview"
-            android:layout_weight="2.25">
+            android:layout_weight="1">
 
         </ListView>
 
@@ -46,6 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Total amount ="
+            android:id="@+id/ebill_total_amount"
             android:textSize="19sp"
             />
 
@@ -54,6 +56,8 @@
             android:layout_height="wrap_content"
             android:text="Total weight ="
             android:textSize="19sp"
+            android:id="@+id/ebill_total_weight"
+
             />
 
         <android.support.v7.widget.CardView
