--- a/app/src/main/res/layout/product_list_row_layout.xml
+++ b/app/src/main/res/layout/product_list_row_layout.xml
@@ -212,8 +212,8 @@
                 android:layout_width="match_parent"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="4dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginRight="32dp"
+                android:layout_marginLeft="32dp"
                 android:layout_height="1dp"
                 app:cardBackgroundColor="@color/red"
                 >
@@ -231,10 +231,11 @@
 
 
             <Button
-                android:layout_width="26dp"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
+
                 android:id="@+id/productListRow_productquantityminus_button"
-                android:background="@android:drawable/ic_input_delete"
+                android:background="@drawable/ic_action_minusbtn"
                 android:backgroundTint="@color/red" />
 
 
@@ -248,10 +249,10 @@
                 android:textSize="20sp" />
 
             <Button
-                android:layout_width="26dp"
+                android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:id="@+id/productListRow_productquantityadd_button"
-                android:background="@android:drawable/ic_input_add"
+                android:background="@drawable/ic_action_addbtn"
                 android:backgroundTint="@color/red"/>
 
 
@@ -260,7 +261,7 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="2dp"
             app:cardBackgroundColor="@color/red">
 
         </android.support.v7.widget.CardView>
