--- a/app/src/main/res/layout/ebillpayment_list_row_layout.xml
+++ b/app/src/main/res/layout/ebillpayment_list_row_layout.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:textSize="18sp" />
 
+
     </LinearLayout>
 
 
@@ -38,7 +39,7 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/ebill_row_price_textview"
+            android:id="@+id/ebill_row_weight_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp" />
@@ -58,12 +59,33 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/ebill_row_weight_textview"
+            android:id="@+id/ebill_row_price_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Product Quantity     :"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/ebill_row_quantity_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
 
 
 </LinearLayout>
